# duckdb

./: CMakeLists.txt  Makefile  README.md
.github/actions/build_extensions/: action.yml
.github/actions/manylinux_2014_setup/: action.yml
.github/actions/ubuntu_16_setup/: action.yml
.github/actions/ubuntu_18_setup/: action.yml
.github/config/: in_tree_extensions.cmake  out_of_tree_extensions.cmake  vcpkg_extensions.cmake
.github/workflows/: LinuxRelease.yml  Main.yml  MainCI.yml  NightlyTests.yml  NodeJS.yml  OSX.yml  Python.yml  R.yml  README.md  Wasm.yml  Windows.yml  _extension_build_toolchain_test.yml  _extension_client_tests.yml  _extension_distribution.yml  _extension_linux.yml  _extension_macos.yml  _extension_windows.yml
benchmark/: CMakeLists.txt  benchmark_runner.cpp
benchmark/include/: benchmark.hpp  benchmark_runner.hpp  duckdb_benchmark.hpp  sgx_stats.hpp
benchmark/micro/copy/: to_parquet_partition_by_few.benchmark  to_parquet_partition_by_few_limited_memory.benchmark  to_parquet_partition_by_many.benchmark  to_parquet_partition_lineitem.benchmark
benchmark/tpch/: sf1.cpp  startup.cpp
extension/: README.md
extension/httpfs/: httpfs.cpp
extension/httpfs/include/: httpfs.hpp
extension/json/: json_scan.cpp
extension/parquet/: parquet_extension.cpp  parquet_metadata.cpp  parquet_reader.cpp
extension/parquet/include/: parquet_reader.hpp
scripts/: amalgamation.py  build_out_of_tree_extensions.py  extension-upload.sh  generate_csv_header.py  merge_vcpkg_deps.py  node_build.sh  node_build_win.sh  run_s3_test_server.sh  setup_manylinux2014.sh
scripts/sqllogictest/: result.py
src/: CMakeLists.txt
src/catalog/: catalog.cpp
src/common/: CMakeLists.txt  aes.cpp  base64.cpp  counter.cpp  crypto.cpp  enum_util.cpp  file_buffer.cpp  file_system.cpp  hive_partitioning.cpp  malloc.cpp  multi_file_reader.cpp  printer.cpp  sgx.cpp  virtual_file_system.cpp
src/common/serializer/: buffered_file_reader.cpp  buffered_file_writer.cpp
src/common/types/: data_chunk.cpp  partitioned_column_data.cpp  vector.cpp  vector_buffer.cpp  vector_constants.cpp
src/function/: function.cpp  table_function.cpp
src/main/: client_context.cpp  config.cpp  connection.cpp  database.cpp  query_profiler.cpp  stream_query_result.cpp
src/parallel/: pipeline_executor.cpp  task_scheduler.cpp
src/planner/: bind_context.cpp
src/storage/: CMakeLists.txt  block.cpp  buffer_manager.cpp  data_table.cpp  encrypted_segment.cpp  numeric_encrypted_segment.cpp  single_file_block_manager.cpp  storage_manager.cpp
src/transaction/: transaction_context.cpp
test/: CMakeLists.txt  unittest.cpp
test/api/: test_api.cpp  test_explicit_auto_commit.cpp
test/arrow/: CMakeLists.txt
test/common/: test_file_system.cpp
test/helpers/: CMakeLists.txt  test_helpers.cpp
test/include/: test_helpers.hpp
test/sqlite/: sqllogic_test_runner.cpp
tools/: CMakeLists.txt
tools/nodejs/: binding.gyp  duckdb.js  package.json
tools/pythonpkg/: CMakeLists.txt  cibw.toml  setup.py
tools/rpkg/: NAMESPACE  configure  rconfigure.py
tools/sqlite3_api_wrapper/: sqlite3_api_wrapper.cpp
(+158 files in other folders)
